# todo-app-agentic-ai

./: .dockerignore  .gitignore  Dockerfile  GEMINI.md  pyproject.toml  requirements.txt  start.sh
.gemini/tmp/: commit_message.txt
.specify/memory/: constitution.md
api/: index.py  requirements.txt
api/src/in_memory_todo_app/: chat_router.py  main.py
backend/: database.db  pyproject.toml
backend/src/todo_backend/: auth.py  database.py  main.py  models.py
charts/frontend/: Chart.yaml  values.yaml
charts/frontend/templates/: _helpers.tpl  deployment.yaml
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/src/components/: ChatWindow.tsx  MessageList.tsx  TaskForm.tsx  TaskItem.tsx  TaskList.tsx
frontend/src/contexts/: AuthContext.tsx  ChatContext.tsx  TaskContext.tsx
frontend/src/lib/: AuthContext.tsx  api.ts  auth.ts
frontend/src/types/: index.ts
history/prompts/better-auth/: 0007-implement-auth-js-for-improved-authentication.implement.prompt.md
history/prompts/console-todo-app/: 0002-create-phase-i-specification.spec.prompt.md  0003-create-phase-i-plan.plan.prompt.md  0006-create-phase-i-task-list.tasks.prompt.md
specs/: master-project-tasks.md  plan.md
specs/001-console-todo-app/: data-model.md  implementation-plan.md  research.md  spec.md  tasks.md
specs/002-web-todo-app/: spec.md
specs/003-title-implement-more/: plan.md  spec.md  tasks.md
specs/004-local-kubernetes-deployment/: spec.md
src/in_memory_todo_app/: main.py
tests/unit/: test_task.py  test_task_manager.py
(+73 files in other folders)
